Fixed wrong position of orange dot in questionnaire index

--- a/web/static/css/_global.scss
+++ b/web/static/css/_global.scss
@@ -325,6 +325,9 @@ i.survey-status { // icon for survey status on index
     border-radius: 50%;
     width: 12px;
     height: 12px;
+    position: absolute;
+    top: -5px;
+    left: -25px;
   }
 }
 
